* Set a default description after setting a statement

Version 0.2 - 2015-04-29
* Add Statement description
* Renamed properties of Transaction to follow the norm
* Add support for ING specific description format

Version 0.1 - 2014-06-25
* Initial release