@@ -1,3 +1,4 @@
+* Add support for RegioBank description format
 * Set a default description after setting a statement
 
 Version 0.2 - 2015-04-29
